# Grayscale_FIlters

./: CMakeLists.txt  README.md
Documentation/html/: _algorithms_8cpp.html  _algorithms_8h.html  _algorithms_8h_source.html  _utils_8cpp.html  _utils_8h.html  _utils_8h_source.html  annotated.html  class_main_window-members.html  class_main_window.html  classes.html  dir_0a824aa1f70ce3b829ef378253b085da.html  dir_63490ba1699785134830aee158655eb3.html  dir_98110dfa9920fc464ea50b090d7e3a05.html  dir_fa8407cedc9794f97ce58d03bf4f781c.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  namespace_algo.html  namespace_ui.html  namespace_utils.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html
Documentation/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  namespaces_0.js  search.css  searchdata.js  variables_0.js
Platform Scripts/: vs_with_platform_env.bat
Resources/: CMakeLists.txt
Scripts/: start_application.bat
Scripts/Batch/: run_tests.bat
Scripts/CTest/: ImageProcessingApp_build.cmake  ImageProcessingApp_config.cmake  ImageProcessingApp_tests.cmake  ImageProcessing_run.bat  ImageProcessing_run_pipeline_stages_locally.bat  cmakegui_config.cmake
Sources/: CMakeLists.txt
Sources/Algorithms/: Algorithms.cpp  Algorithms.h  CMakeLists.txt
Sources/ImageProcessingApp/: CMakeLists.txt  main.cpp  res.qrc
Sources/UserInterface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sources/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
Tests/: CMakeLists.txt  Teste_ImageProcessingApp.cpp
Tests/Scripts/CTest/: ImageProcessingApp_config.cmake  ImageProcessing_run.bat  ImageProcessing_run_pipeline_stages_locally.bat  cmakegui_config.cmake  project_name.cmake
